# weatherpi

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test.yml
api/: main.py
api/static/: api.html  app.js  docs_viewer.html  exports.html  index.html  login.html  outbox.html  settings.html  settings.js  style.css
api/static/js/: app.js  docs_viewer.js  exports.js  login.js  outbox.js  settings.js
collector/: backup_worker.py  delivery_worker.py  main.py  outputs_worker.py  remote_config_worker.py  update_worker.py
collector/sensors/: base.py  mock.py
common/: alerts.py  config.py  db.py  local_auth.py  models.py  networking.py  remote_config_manager.py  secrets.py  security.py  telemetry.py  update_manager.py
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  RASPBERRY_PI_GUIA.md
scripts/: init_db.py  release_launcher.py  run_all.py
tests/: __init__.py  conftest.py  test_api_models.py  test_models.py
