[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherpi"
version = "0.1.0"
description = "Open source local weather station with Python + FastAPI + SQLite"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "WeatherPi Contributors"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.43.0",
    "pydantic>=2.12.5",
    "httpx>=0.28.1",
    "paho-mqtt>=2.1.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
    "mypy>=1.0.0",
    "types-PyYAML",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/plorentera/weatherpi"
Documentation = "https://github.com/plorentera/weatherpi/tree/main/docs"
Repository = "https://github.com/plorentera/weatherpi"
Issues = "https://github.com/plorentera/weatherpi/issues"

[tool.setuptools]
packages = ["api", "collector", "common", "scripts"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313", "py314"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["api", "collector", "common", "scripts"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_untyped_calls = false
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0330", "C0326",  # Bad whitespace
    "R0913",           # Too many arguments
    "R0914",           # Too many locals
    "W0212",           # Protected access
]

[tool.pylint.format]
max-line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # Line too long (handled by black)
    "W191",  # Indentation contains tabs
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--strict-markers --cov=api --cov=collector --cov=common --cov-report=html --cov-report=term"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["api", "collector", "common"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
